Revise translator credits in Swedish messages
Updated translator information and added year 2025.

--- a/GnuPG/gnupg.sv.po
+++ b/GnuPG/gnupg.sv.po
@@ -1,18 +1,8 @@
 # Swedish messages for gnupg
 # Copyright (C) 1999-2011 Free Software Foundation, Inc.
-# Per Tunedal <info@clipanish.com>, 2004.
 # Daniel Resare <daniel@resare.com>, 1999-2002.
-# Daniel Nylander <po@danielnylander.se>, 2006, 2007, 2008, 2011.
-#
-# ===================================================
-# This a completely revised and extended translation.
-# All translations have been revised and updated 2002.
-# In 2004 new strings where translated and most errors
-# where corrected. The translations were checked for
-# consistency and some expressions where given new
-# translations.
-# 2004/12/01 Per Tunedal
-# ===================================================
+# Per Tunedal <info@clipanish.com>, 2004.
+# Daniel Nylander <po@danielnylander.se>, 2006, 2007, 2008, 2011, 2025.
 #
 # First translator Daniel Resare <daniel@resare.com>, 1999-2002,
 # who sends his thanks to André Dahlqvist <andre@beta.telenordia.se>
