Update copyright year in libgpg-error.sv.po
Updated copyright year for the Swedish translation.

--- a/GnuPG/libgpg-error.sv.po
+++ b/GnuPG/libgpg-error.sv.po
@@ -1,7 +1,7 @@
 # Swedish translation for libgpg-error.
 # Copyright (C) 2006, 2007, 2009 Free Software Foundation, Inc.
 # This file is distributed under the same license as the libgpg-error package.
-# Daniel Nylander <po@danielnylander.se>, 2006, 2007, 2009.
+# Daniel Nylander <po@danielnylander.se>, 2006, 2007, 2009, 2025.
 #
 msgid ""
 msgstr ""
