--- a/GnuPG/gpgol.sv.po
+++ b/GnuPG/gpgol.sv.po
@@ -1,7 +1,7 @@
 # Swedish translation for GPGol.
-# Copyright (C) 2006 Free Software Foundation
+# Copyright (C) 2025 Free Software Foundation
 # This file is distributed under the same license as the gpgol package.
-# Daniel Nylander <po@danielnylander.se>, 2006.
+# Daniel Nylander <po@danielnylander.se>, 2006, 2025.
 #
 msgid ""
 msgstr ""
