--- a/Batocera Linux/emulationstation2.po
+++ b/Batocera Linux/emulationstation2.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: emulationstation\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-09-16 11:17+0200\n"
+"PO-Revision-Date: 2025-12-05 08:43+0100\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv_SE\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.7\n"
+"X-Generator: Poedit 3.8\n"
 
 msgid "SCANNING BLUETOOTH"
 msgstr "SÖKER PÅ BLUETOOTH"
@@ -501,11 +501,20 @@ msgstr "DISKANVÄNDNING (ANVÄNDARE)"
 msgid "SYSTEM DISK USAGE"
 msgstr "DISKANVÄNDNING (SYSTEM)"
 
+msgid "DISK USAGE"
+msgstr "DISKANVÄNDNING"
+
 msgid "SYSTEM"
 msgstr "SYSTEM"
 
 msgid "VIDEO DRIVER"
 msgstr "GRAFIKDRIVRUTIN"
+
+msgid "PARIS"
+msgstr "PARIS"
+
+msgid "OSAKA"
+msgstr "OSAKA"
 
 msgid "SEOUL"
 msgstr "SEOUL"
@@ -930,6 +939,96 @@ msgstr "SKRAPNING PÅGÅR. VILL DU STOPPA DEN?"
 
 msgid "NO GAMES FIT THAT CRITERIA."
 msgstr "INGA SPEL MATCHAR DESSA KRITERIER."
+
+msgid "KEYBOARDTOPADS"
+msgstr "KEYBOARDTOPADS"
+
+msgid "HOTKEYS"
+msgstr "SNABBTANGENTER"
+
+msgid "KEYS DEFINED BUT JOYSTICK NOT NAMED"
+msgstr "TANGENTER DEFINIERADE MEN JOYSTICK INTE NAMNGIVEN"
+
+msgid "JOYSTICK NAMED BUT NO KEYS DEFINED"
+msgstr "JOYSTICK NAMNGIVEN MEN INGA TANGENTER DEFINIERADE"
+
+msgid "UNPLUG AND REPLUG THE DEVICE TO APPLY"
+msgstr "KOPPLA FRÅN OCH KOPPLA IN ENHETEN IGEN FÖR ATT TILLÄMPA"
+
+msgid "JOYSTICK NAME"
+msgstr "JOYSTICKNAMN"
+
+msgid "PRESS A KEY OR WAIT 4 SECONDS TO CLEAR"
+msgstr "TRYCK PÅ EN TANGENT ELLER VÄNTA 4 SEKUNDER FÖR ATT TA BORT"
+
+msgid "OVERLAYS"
+msgstr "ÖVERLAGRINGAR"
+
+msgid "BRIGHTNESS CYCLE"
+msgstr "LJUSHETSVÄXLING"
+
+msgid "COIN"
+msgstr "MYNT"
+
+msgid "EXIT"
+msgstr "AVSLUTA"
+
+msgid "FAST FORWARD"
+msgstr "SNABBT FRAMÅT"
+
+msgid "MENU"
+msgstr "MENY"
+
+msgid "FILES"
+msgstr "FILER"
+
+msgid "NEXT DISK"
+msgstr "NÄSTA DISK"
+
+msgid "NEXT SLOT"
+msgstr "NÄSTA PLATS"
+
+msgid "PAUSE"
+msgstr "PAUSA"
+
+msgid "PREVIOUS SLOT"
+msgstr "FÖREGÅENDE PLATS"
+
+msgid "RESET"
+msgstr "ÅTERSTÄLL"
+
+msgid "RESTORE STATE"
+msgstr "ÅTERSTÄLL TILLSTÅND"
+
+msgid "REWIND"
+msgstr "TILLBAKASPOLNING"
+
+msgid "SAVE STATE"
+msgstr "SPARA TILLSTÅND"
+
+msgid "SCREEN LAYOUT"
+msgstr "SKÄRMLAYOUT"
+
+msgid "SWAP SCREEN"
+msgstr "VÄXLA SKÄRM"
+
+msgid "TRANSLATION"
+msgstr "ÖVERSÄTTNING"
+
+msgid "VOLUME DOWN"
+msgstr "VOLYM NER"
+
+msgid "VOLUME MUTE"
+msgstr "VOLYM TYST"
+
+msgid "VOLUME UP"
+msgstr "VOLYM UPP"
+
+msgid "CONTROL CENTER"
+msgstr "KONTROLLCENTER"
+
+msgid "KEY ASSIGNED TWICE"
+msgstr "TANGENT TILLDELAD TVÅ GÅNGER"
 
 msgid "INSTALL ON A NEW DISK"
 msgstr "INSTALLERA PÅ EN NY DISK"
@@ -1634,6 +1733,9 @@ msgstr "ÖVERKLOCKNING"
 msgid "LED HARDWARE"
 msgstr "LED-HÅRDVARA"
 
+msgid "ENABLE LED"
+msgstr "AKTIVERA LED"
+
 msgid "RED"
 msgstr "RÖD"
 
@@ -1780,9 +1882,6 @@ msgstr ""
 
 msgid "SMOOTH GAMES (BILINEAR FILTERING)"
 msgstr "UTJÄMNING I SPEL (BILINJÄR FILTRERING)"
-
-msgid "REWIND"
-msgstr "TILLBAKASPOLNING"
 
 msgid "Store past states to rewind to in realtime, if the core supports it."
 msgstr ""
@@ -2095,6 +2194,9 @@ msgstr "WIFI-SSID"
 msgid "WIFI KEY"
 msgstr "WIFI-NYCKEL"
 
+msgid "WIFI COUNTRY"
+msgstr "WIFI-LAND"
+
 msgid "WIFI ENABLED"
 msgstr "WIFI AKTIVERAT"
 
@@ -2349,9 +2451,6 @@ msgstr "REDIGERA DETTA SPELETS METADATA"
 msgid "VIEW PAD TO KEYBOARD INFORMATION"
 msgstr "VISA 'PAD TO KEYBOARD'-INFORMATION"
 
-msgid "RESET"
-msgstr "ÅTERSTÄLL"
-
 msgid "ADD COMBINATION KEY"
 msgstr "LÄGG TILL KOMBINATIONSNYCKEL"
 
@@ -2400,8 +2499,11 @@ msgstr "ALFABETISKT"
 msgid "BY MANUFACTURER"
 msgstr "EFTER TILLVERKARE"
 
-msgid "BY HARDWARE TYPE"
-msgstr "EFTER HÅRDVARUTYP"
+msgid "BY HARDWARE TYPE THEN ALPHABETICALLY"
+msgstr "EFTER HÅRDVARUTYP OCH SEDAN ALFABETISKT"
+
+msgid "BY HARDWARE TYPE THEN YEAR"
+msgstr "EFTER HÅRDVARUTYP OCH ÅR"
 
 msgid "BY MANUFACTURER AND TYPE"
 msgstr "EFTER TILLVERKARE OCH TYP"
@@ -2693,11 +2795,78 @@ msgstr "RITA UT PISTOLENS HÅRKORS"
 msgid "BEHAVIOR"
 msgstr "BETEENDE"
 
-msgid "RESTRICT HOTKEYS TO EXIT"
-msgstr "BEGRÄNSA SNABBTANGENTER FÖR AVSLUT"
+msgid "JOYSTICKS HOTKEYS"
+msgstr "SNABBTANGENTER FÖR JOYSTICKS"
+
+msgid "RESTRICT JOYSTICKS HOTKEYS TO EXIT"
+msgstr "BEGRÄNSA SNABBTANGENTER FÖR JOYSTICK ATT AVSLUTA"
+
+msgid "GLOBAL HOTKEYS"
+msgstr "GLOBALA SNABBTANGENTER"
 
 msgid "default"
 msgstr "standard"
+
+msgid "SOUTH"
+msgstr "SÖDER"
+
+msgid "EAST"
+msgstr "ÖST"
+
+msgid "NORTH"
+msgstr "NORR"
+
+msgid "WEST"
+msgstr "VÄST"
+
+msgid "D-PAD UP"
+msgstr "RIKTNINGSKNAPP UPP"
+
+msgid "D-PAD DOWN"
+msgstr "RIKTNINGSKNAPP NER"
+
+msgid "D-PAD LEFT"
+msgstr "RIKTNINGSKNAPP VÄNSTER"
+
+msgid "D-PAD RIGHT"
+msgstr "RIKTNINGSKNAPP HÖGER"
+
+msgid "LEFT SHOULDER"
+msgstr "VÄNSTER AXEL"
+
+msgid "RIGHT SHOULDER"
+msgstr "HÖGER AXEL"
+
+msgid "LEFT TRIGGER"
+msgstr "VÄNSTER AVTRYCKARE"
+
+msgid "RIGHT TRIGGER"
+msgstr "HÖGER AVTRYCKARE"
+
+msgid "LEFT STICK PRESS"
+msgstr "TRYCK PÅ VÄNSTER SPAK"
+
+msgid "RIGHT STICK PRESS"
+msgstr "TRYCK PÅ HÖGER SPAK"
+
+msgid "HOTKEY"
+msgstr "HOTKEY"
+
+msgid "NO DEVICE FOUND (JAMMASD, IPAC, ...)"
+msgstr "INGEN ENHET HITTAD (JAMMASD, IPAC, ...)"
+
+msgid "DECLARE A NEW GLOBAL HOTKEY"
+msgstr "DEKLARERA EN NY GLOBAL SNABBTANGENT"
+
+msgid "YOU'VE 4 SECONDS TO PRESS EXACTLY 2 TIMES THE GLOBAL HOTKEY"
+msgstr ""
+"DU HAR 4 SEKUNDER PÅ DIG ATT TRYCKA EXAKT 2 GÅNGER PÅ GLOBAL SNABBTANGENT"
+
+msgid "NO GLOBAL HOTKEY DETECTED"
+msgstr "INGEN GLOBAL SNABBTANGENT UPPTÄCKTES"
+
+msgid "MORE THAN ONE GLOBAL HOTKEY DETECTED"
+msgstr "FLER ÄN EN GLOBAL SNABBTANGENT UPPTÄCKTES"
 
 msgid "BORDER SIZE"
 msgstr "RAMSTORLEK"
@@ -3031,9 +3200,6 @@ msgstr[1] "%i SPEL"
 msgid "NAVIGATION BAR"
 msgstr "NAVIGERINGSFÄLT"
 
-msgid "FILES"
-msgstr "FILER"
-
 msgid ""
 "WARNING: THE EMULATOR/CORE CURRENTLY SET DOES NOT SUPPORT THIS GAME'S FILE "
 "FORMAT.\n"
@@ -3060,9 +3226,6 @@ msgstr "Läser in tema"
 
 msgid "Loading gamelists"
 msgstr "Läser in spellistor"
-
-msgid "MENU"
-msgstr "MENY"
 
 msgid "GENRE"
 msgstr "GENRE"
@@ -3608,6 +3771,12 @@ msgstr ""
 "KALIBRERAR PISTOL\n"
 "Skjut på mål för att kalibera"
 
+#~ msgid "BY HARDWARE TYPE"
+#~ msgstr "EFTER HÅRDVARUTYP"
+
+#~ msgid "RESTRICT HOTKEYS TO EXIT"
+#~ msgstr "BEGRÄNSA SNABBTANGENTER FÖR AVSLUT"
+
 #~ msgid "SCRAPER SETTINGS"
 #~ msgstr "SKRAPNINGSINSTÄLLNINGAR"
 
@@ -3898,9 +4067,6 @@ msgstr ""
 
 #~ msgid "RIGHT ANALOG RIGHT"
 #~ msgstr "HÖGER ANALOG HÖGER"
-
-#~ msgid "HOTKEY"
-#~ msgstr "HOTKEY"
 
 #~ msgid "RESIZE TATTOO WIDTH"
 #~ msgstr "STORLEKSÄNDRA TATUERINGSBREDD"
